@@ -5,6 +5,7 @@ Fixes:
 - Fixed take tmp objects for redrawing in effect from the correct page
 - Fixed show the duration for the correct page if not all slides are shown
 - Fixed crash in infinite loop presentation mode when first slide is not shown
+- Fixed redrawing of lines in drawing mode in case of a repaint event
 
 Changes:
 - If a page is shown more than once during a presentation add the time for 
